added new areas

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://picsum.photos/32/32" />
+    <link rel="icon" type="image/png" href="/vite.svg" id="app-favicon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OH Tech | Future of Digital</title>
-    <meta name="description" content="OH Tech - İsteğe özel web, masaüstü ve mobil uygulama çözümleri." />
+    <title>HYzon Tech | Future of Digital</title>
+    <meta name="description" content="HYzon Tech - İsteğe özel web, masaüstü ve mobil uygulama çözümleri." />
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
