--- a/index.html
+++ b/index.html
@@ -5,7 +5,29 @@
     <link rel="icon" type="image/png" href="/vite.svg" id="app-favicon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HYzon Tech | Future of Digital</title>
-    <meta name="description" content="HYzon Tech - İsteğe özel web, masaüstü ve mobil uygulama çözümleri." />
+    <meta name="description" content="HYzon Tech - İsteğe özel web, mobil, masaüstü uygulama ve yapay zekâ çözümleriyle işletmenizin dijital geleceğini tasarlar." />
+    <meta name="keywords" content="HYzon Tech, yazılım ajansı, özel yazılım, React, Flutter, Laravel, mobil uygulama, web geliştirme, Kütahya yazılım" />
+    <meta name="author" content="HYzon Tech" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#0f172a" />
+    <link rel="canonical" href="https://www.hyzontech.com/" />
+    <link rel="alternate" href="https://www.hyzontech.com/tr" hreflang="tr" />
+    <link rel="alternate" href="https://www.hyzontech.com/en" hreflang="en" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="HYzon Tech | Future of Digital" />
+    <meta property="og:description" content="Özel web, mobil, masaüstü ve yapay zekâ çözümleriyle performans ve güvenliği aynı anda sunan HYzon Tech." />
+    <meta property="og:url" content="https://www.hyzontech.com/" />
+    <meta property="og:site_name" content="HYzon Tech" />
+    <meta property="og:image" content="https://www.hyzontech.com/og-cover.jpg" />
+    <meta property="og:locale" content="tr_TR" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="HYzon Tech | Future of Digital" />
+    <meta name="twitter:description" content="Web, mobil, masaüstü ve otonom sistem projelerinde uçtan uca yazılım çözümleri." />
+    <meta name="twitter:image" content="https://www.hyzontech.com/og-cover.jpg" />
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -72,6 +94,29 @@
           console.warn('Theme init failed', err);
         }
       })();
+    </script>
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "HYzon Tech",
+        "url": "https://www.hyzontech.com/",
+        "logo": "https://www.hyzontech.com/logo.png",
+        "description": "Özel web, mobil, masaüstü ve yapay zekâ çözümleri sunan HYzon Tech.",
+        "email": "mailto:yuuf_557@hotmail.com",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Kütahya",
+          "addressRegion": "TR",
+          "addressCountry": "Turkey"
+        },
+        "sameAs": [
+          "https://www.linkedin.com/company/hyzontech",
+          "https://github.com/hyzontech"
+        ]
+      }
     </script>
     
     <script type="importmap">
